--- a/LoginTask/LoginTask/Login/LoginViewController.xib
+++ b/LoginTask/LoginTask/Login/LoginViewController.xib
@@ -16,6 +16,7 @@
                 <outlet property="passwordTextField" destination="G9Z-w1-LuQ" id="DlA-JM-frR"/>
                 <outlet property="secondButton" destination="7gT-Km-16z" id="Upg-0M-3Kz"/>
                 <outlet property="secureContainer" destination="IgO-MM-5R5" id="4JR-rk-qA8"/>
+                <outlet property="secureLabel" destination="g2b-g0-mGy" id="kgt-t1-pmB"/>
                 <outlet property="thirdButton" destination="Fcz-Ak-som" id="ees-7U-uqm"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
@@ -53,8 +54,8 @@
                         <action selector="authorizeButtonDidTap:" destination="-1" eventType="touchUpInside" id="0Ji-sj-SUd"/>
                     </connections>
                 </button>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IgO-MM-5R5">
-                    <rect key="frame" x="97" y="722" width="220" height="90"/>
+                <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="IgO-MM-5R5">
+                    <rect key="frame" x="97" y="702" width="220" height="110"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="_" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="g2b-g0-mGy">
                             <rect key="frame" x="104.5" y="8" width="11" height="21.5"/>
@@ -75,6 +76,9 @@
                                     <state key="normal" title="1">
                                         <color key="titleColor" red="0.50196078431372548" green="0.64313725490196072" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
+                                    <connections>
+                                        <action selector="firstButtonDidTap:" destination="-1" eventType="touchUpInside" id="IB3-TV-acb"/>
+                                    </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7gT-Km-16z">
                                     <rect key="frame" x="69" y="0.0" width="50" height="50"/>
@@ -86,6 +90,9 @@
                                     <state key="normal" title="2">
                                         <color key="titleColor" red="0.50196078431372548" green="0.64313725490196072" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
+                                    <connections>
+                                        <action selector="secondButtonDidTap:" destination="-1" eventType="touchUpInside" id="zvP-Q2-FPp"/>
+                                    </connections>
                                 </button>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Fcz-Ak-som">
                                     <rect key="frame" x="138" y="0.0" width="50" height="50"/>
@@ -97,6 +104,9 @@
                                     <state key="normal" title="3">
                                         <color key="titleColor" red="0.50196078431372548" green="0.64313725490196072" blue="0.92941176470588238" alpha="1" colorSpace="calibratedRGB"/>
                                     </state>
+                                    <connections>
+                                        <action selector="thirdButtonDidTap:" destination="-1" eventType="touchUpInside" id="cfv-Jk-RCD"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <constraints>
@@ -108,7 +118,7 @@
                     <constraints>
                         <constraint firstAttribute="width" constant="220" id="2PS-GF-Qwc"/>
                         <constraint firstAttribute="trailing" secondItem="zGw-9r-bs5" secondAttribute="trailing" constant="16" id="6oA-9x-ZZ6"/>
-                        <constraint firstAttribute="height" constant="90" id="8ht-4r-JDQ"/>
+                        <constraint firstAttribute="height" constant="110" id="8ht-4r-JDQ"/>
                         <constraint firstItem="g2b-g0-mGy" firstAttribute="top" secondItem="IgO-MM-5R5" secondAttribute="top" constant="8" id="Tgm-9z-7ds"/>
                         <constraint firstItem="g2b-g0-mGy" firstAttribute="centerX" secondItem="IgO-MM-5R5" secondAttribute="centerX" id="U4e-M2-4Z2"/>
                         <constraint firstItem="zGw-9r-bs5" firstAttribute="top" secondItem="g2b-g0-mGy" secondAttribute="bottom" constant="16" id="UaX-fd-LKg"/>
